# mitel_ommclient2

./: .gitignore  README.md  flake.nix  ommcli  pyproject.toml
docs/: conf.py  index.rst
docs/api/: client.rst  connection.rst  exceptions.rst  index.rst  messages.rst  mitel_ommclient2.messages.rst  mitel_ommclient2.rst  modules.rst
docs/manual/: client.rst  connection.rst  messages.rst
mitel_ommclient2/: __init__.py  cli.py  client.py  connection.py  session.py
mitel_ommclient2/messages/: __init__.py  deleteppuser.py  getaccount.py  getdectsubscriptionmode.py  getppdev.py  getppuser.py  open.py  ping.py  setdectsubscriptionmode.py
mitel_ommclient2/types/: __init__.py
